css/team.css
.team__cards {
  max-width: 1170px;
  margin: 101px auto;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 30px;
}

.team__name {
  margin-top: 30px;

  color: #2d3033;
  font-family: 'Raleway';
  font-size: 22px;
  font-weight: 400;
  text-align: left;
}

.team__position {
  margin-top: 16px;

  color: #e84545;
  font-family: 'Raleway';
  font-size: 13px;
  font-weight: 400;
  text-align: left;
  text-transform: uppercase;
}

.team__description {
  margin-top: 15px;

  color: #6c7279;
  font-family: 'Raleway';
  font-size: 14px;
  font-weight: 400;
  line-height: 21px;
  text-align: left;
}

.team__scoial-icons {
  gap: 4px;
}

.team__social-icon {
  line-height: 38px;

  border: 1px solid #e8ecee;
  color: #c6cacc;
}

